reference_dangling/reference_dangling.log
   Compiling reference_dangling v0.1.0 (/home/haha/Rust/reference_dangling)
error[E0106]: missing lifetime specifier
 --> src/main.rs:6:16
  |
6 | fn dangle() -> &String{
  |                ^ expected named lifetime parameter
  |
  = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
  |
6 | fn dangle() -> &'static String{
  |                 +++++++
help: instead, you are more likely to want to return an owned value
  |
6 - fn dangle() -> &String{
6 + fn dangle() -> String{
  |

error[E0515]: cannot return reference to local variable `s`
 --> src/main.rs:9:5
  |
9 |     &s//the referene is live longer than the refrred data.
  |     ^^ returns a reference to data owned by the current function

Some errors have detailed explanations: E0106, E0515.
For more information about an error, try `rustc --explain E0106`.
error: could not compile `reference_dangling` (bin "reference_dangling") due to 2 previous errors
